--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   , "dependencies": {
       "express": "2.5.8"
     , "jade": ">= 0.0.1"
+    , "share" : "0.5.0"
+    , "temp" : "*"
   }
   , "engines" : {
       "node" : "0.6.x",
