--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     , "jade": ">= 0.0.1"
     , "share" : "0.5.0"
     , "temp" : "*"
+    , "mongoose" : "*"
+    , "mongoose-attachments" : "*"
   }
   , "engines" : {
       "node" : "0.6.x",
