--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     , "mongoose" : "*"
     , "mongoose-attachments" : "*"
     , "socket.io" : "*"
+    , "request" : "*"
+    , "temp" : "*"
   }
   , "engines" : {
       "node" : "0.6.x",
