--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     , "socket.io" : "*"
     , "request" : "*"
     , "temp" : "*"
+    , "connect-mongo" : "*"
   }
   , "engines" : {
       "node" : "0.6.x",
