--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     , "socket.io" : "*"
     , "request" : "*"
     , "temp" : "*"
-    , "connect-mongo" : "*"
+    , "connect-mongo" : ">=0.8.4"
   }
   , "engines" : {
       "node" : "0.8.x",
