--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     , "temp" : "*"
     , "mongoose" : "*"
     , "mongoose-attachments" : "0.0.x"
-    , "aw2js" : "0.2.x"
+    , "aws2js" : "0.2.x"
     , "socket.io" : "*"
     , "request" : "*"
     , "temp" : "*"
