--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   , "private": true
   , "dependencies": {
       "express": "2.5.0"
-    , "share" : "0.5.0"
+    , "share" : "*"
     , "temp" : "*"
     , "mongoose" : "*"
-
     , "socket.io" : "*"
     , "request" : "*"
     , "temp" : "*"
